# support-for-a-hierarchy-of-three-dimensional-curves-cpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.cache/clangd/index/: curves.hpp.F9B5B12FFD6C8D48.idx
include/: curves.hpp
source/: curves.cpp  main.cpp
source/.cache/clangd/index/: main.cpp.4E6051E8D662E2FA.idx
